--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "^6.0.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -37,6 +38,7 @@
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
