--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.3",
     "@angular/service-worker": "^6.0.3",
+    "@types/cropperjs": "^1.1.3",
+    "aws-sdk": "^2.275.1",
     "core-js": "^2.5.4",
+    "cropperjs": "^1.4.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "rxjs": "^6.0.0",
