--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
                         "assets": ["src/favicon.ico", "src/assets", "src/manifest.json"],
                         "styles": [
                             "src/styles.scss",
-                            "node_modules/cropperjs/dist/cropper.min.css"
+                            "node_modules/cropperjs/dist/cropper.min.css",
+                            "node_modules/ng2-dnd/bundles/style.css"
                         ],
                         "scripts": []
                     },
