--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cropperjs": "^1.4.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
+    "ng2-dnd": "^5.0.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
